# libcoroutine

./: CMakeLists.txt  Readme.md  coroutines.sln
asm/: asm.vcxproj  asm.vcxproj.filters  stack32.asm  stack64.asm
coroutine/: CMakeLists.txt  TargetArch.cmake  coroutine.c  stack32.asm  stack64.asm
coroutines/: CMakeLists.txt  ReadMe.txt  coroutine.c  coroutine.h  coroutines.vcxproj  coroutines.vcxproj.filters  stack.asm  stack32.asm  stack64.asm
demo/: coroutine_wrapper.h  demo.vcxproj  demo.vcxproj.filters  generator.cpp  generator.h  main.cpp
example/: CMakeLists.txt  coroutine_wrapper.h  generator.cpp  generator.h  main.cpp
include/: coroutine.h
tests/: CMakeLists.txt  main.cpp  multi_object.cpp  single_object.cpp  tests.cpp
